fix sizing of iframe on mobile

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,7 +20,7 @@ html.dark {
 }
 
 body {
-  @apply min-h-screen flex flex-col justify-between;
+  @apply min-h-screen flex flex-col justify-between overflow-x-hidden;
 }
 
 main {
@@ -39,7 +39,7 @@ code {
   @apply font-mono;
 }
 
-img {
+img, video {
   @apply w-full h-auto;
 }
 
